test/configCases/errors/entry-not-found/errors.js
module.exports = [
	[/^Entry module not found/, /.\/index\.js/]
];